--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,15 @@
 Package: credential
 Type: Package
-Title: Filter biological features in metabolomic data.
-Version: 2.0
-Date: 2014-08-15
-Author: Nathaniel G. Mahieu
-Maintainer: Nathaniel G. Mahieu <nathaniel.mahieu@wustl.edu>
-Description: Searches for pairs of U12C/U13C labeled peaks in metabolomic data.  Compatible with any chromatography coupled to an accurate-mass mass analyzer.
+Title: Metabolomic artifact, noise, and contaminant removal.
+Version: 3.0
+Date: 2017-01-01
+Author: Nathaniel Guy Mahieu
+Maintainer: Nathaniel Guy Mahieu <nathaniel.mahieu@wustl.edu>
+Description: Credentialing searches for U12C-U13C feature pairs in labeled metabolomic data.
 License: 
-Depends: xcms, CAMERA, plyr, ggplot2, reshape2, Hmisc, gridExtra
+Depends: 
+  R (>= 3.1.0)
+Imports:
+  matrixStats
+Suggests:
+  ggplot2
