--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,15 @@ export(credentialknots)
 export(credentialquipu)
 export(findknots)
 export(fixmergedknots)
+export(getXCMSfeature)
+export(plotcredpeaks)
 import(data.table)
 import(ggplot2)
+import(grDevices)
 import(gridExtra)
 import(igraph)
 import(magrittr)
 import(matrixStats)
 import(stats)
 import(utils)
+import(xcms)
