--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: credential
 Type: Package
 Title: An bioinformatics tool for biologically-relavent feature extraction and untargeted metabolomics method optimization
-Version: 3.1.6
-Date: 2019-11-26
+Version: 3.1.7
+Date: 2020-07-24
 Author: Nathanial Guy Mahieu <nate@mahie.us>, Lingjue Wang<lingjue@wustl.edu>
 Maintainer: Lingjue Wang <lingjue@wustl.edu>
 Description: Credentialing searches for U12C-U13C feature pairs in labeled metabolomic data.
@@ -19,7 +19,8 @@ Imports:
     utils,
     data.table,
     sn,
-    xcms
+    xcms,
+    reshape2
 Suggests:
     rmarkdown,
     readr
