--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ import(gridExtra)
 import(igraph)
 import(magrittr)
 import(matrixStats)
+import(reshape2)
 import(stats)
 import(utils)
 import(xcms)
